@@ -2,6 +2,7 @@ opsiclientd (4.0.86) UNRELEASED; urgency=medium
 
   * opsiclientd_shutdown_starter logs the event it should fire
   * type checking now with isinstance instead of type.
+  * Improved logmessages if shutdown / reboot request is detected.
 
  -- Niko Wenselowski <n.wenselowski@uib.de>  Wed, 27 Oct 2015 12:20:51 +0200
 
